--- a/myapp/templates/layouts/base.html
+++ b/myapp/templates/layouts/base.html
@@ -12,6 +12,9 @@
         <li>
             <a href="/about">about</a>
         </li>
+        <li>
+            <a href="/create_task">create task</a>
+        </li>
     </ul>
 </nav>
 
